--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
         crossorigin="anonymous"></script>
 
 
-<script src="/js/raphael.js"></script>
-<script src="/js/Treant.js"></script>
-<script src="/js/Treant-gui.js"></script>
-<script src="/js/wikidataLang.js"></script>
-<script src="/js/treant-wikidata.js"></script>
+<script src="js/raphael.js"></script>
+<script src="js/Treant.js"></script>
+<script src="js/Treant-gui.js"></script>
+<script src="js/wikidataLang.js"></script>
+<script src="js/treant-wikidata.js"></script>
 
 <script type="text/javascript">
     $("#option_lang").autocomplete({
