--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     .Treant .collapse-switch { width: 3px; height: 3px; display: block; border: 1px solid black; position: absolute; right: 1px; cursor: pointer; }
     .Treant .collapsed .collapse-switch { background-color: #868DEE; }
     .Treant > .node img {	border: none; float: left; }
-
+    .Treant .collapse-switch { width: 10%; height: 20%; bottom: 1px; border: none; }
+    .Treant .node.collapsed { border: 2px solid #000; }
+    .Treant .node.collapsed .collapse-switch { background: none; }
 
     /*body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { margin:0; padding:0; }*/
     p,blockquote,th,td { margin:0; padding:0; }
@@ -63,12 +65,38 @@
       max-height: 82px;
       margin-right:  10px;
     }
-    .Treant .collapse-switch { width: 100%; height: 20%; bottom: 1px; border: none; }
-    .Treant .node.collapsed { border: 2px solid #000; }
-    .Treant .node.collapsed .collapse-switch { background: none; }
+
+
+
+    /* Style all font awesome icons */
+    .fa {
+      padding: 2px;
+      width: 20px;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 25%;
+    }
+
+    /* Add a hover effect if you want */
+    .fa:hover {
+      opacity: 0.7;
+    }
+
+    /* Set a specific color for each brand */
+
+    /* Facebook */
+    .fa-facebook {
+      background: #3B5998;
+      color: white;
+    }
+
+    /* Twitter */
+    .fa-twitter {
+      background: #55ACEE;
+      color: white;
+    }
   </style>
   <link rel="stylesheet" href="https://fperucic.github.io/treant-js/collapsable/perfect-scrollbar/perfect-scrollbar.css">
-
 </head>
 <body>
 <h1>Wikidata Tree Builder</h1>
@@ -170,6 +198,9 @@
             .appendTo( ul );
     };;
 </script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- Add font awesome icons -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114291666-2"></script>
