--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
 <script src="js/Treant.js"></script>
 <script src="js/Treant-gui.js"></script>
 <script src="js/wikidataLang.js"></script>
+<script src="storage/images.js"></script>
+
 <script src="js/treant-wikidata.js"></script>
 
 <script type="text/javascript">
