example, mobile view

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
         <a class="dropdown-item" href="?q=Q4604&level=20&type=descendants&orientation=North&lang=en">Confucius descendants </a>
         <a class="dropdown-item" href="?q=Q5269611&level=6&type=ancestors&orientation=South&lang=en">Dhirendra of Nepal ancestors</a>
         <a class="dropdown-item" href="?q=Q1516371&level=6&type=owns&orientation=North&lang=en&stack=false">Sinar Mas subsidiaries</a>
+        <a class="dropdown-item" href="?q=Q3752663&level=5&type=descendants&orientation=North&lang=en">Trump family</a>
+        <a class="dropdown-item" href="?q=Q2430565&level=9&type=descendants&orientation=North&lang=en">Hamengkubuwono, rulers of Yogyakarta</a>
+        <a class="dropdown-item" href="?q=Q9682&level=5&type=descendants&orientation=North&lang=en">Elizabeth II descendants</a>
       </div>
   </div>
 
@@ -159,17 +162,17 @@
       <input name="q" type="hidden" id="searchbox_id"/>
 
       <div class="form-row">
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-4 col-sm-12">
           <label for="searchbox">Search</label>
           <input type="text" id="searchbox" class="form-control searchbox" value="" onblur="" onfocus="">
         </div>
 
-        <div class="form-group col-md-1">
+        <div class="form-group col-md-1 col-sm-6">
           <label for="option_level">Levels</label>
           <select id="option_level" class="form-control" name="level"></select>
         </div>
 
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-2 col-sm-6">
           <label for="type_select">Property</label>
           <select id="type_select" class="form-control" name="type">
             <option>ancestors</option>
@@ -179,7 +182,7 @@
           </select>
         </div>
 
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-2 col-sm-6">
           <label for="orientation_select">Root Orientation</label>
           <select id="orientation_select" name="orientation" class="form-control">
             <option>North</option>
@@ -189,13 +192,13 @@
           </select>
         </div>
 
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-2 col-sm-6">
           <label for="option_lang">Language</label>
           <input type="hidden" value="" name="lang" id="option_lang_hidden"/>
           <input id="option_lang" class="form-control"/>
         </div>
 
-        <div class="form-group col-md-1 ">
+        <div class="form-group col-md-1 col-sm-6 ">
           <label>Action</label>
           <button type="submit" class="form-control btn btn-primary">Search</button>
         </div>
