--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <a class="dropdown-item" href="?q=Q2430565&level=9&type=descendants&orientation=North&lang=en">Hamengkubuwono, rulers of Yogyakarta</a>
         <a class="dropdown-item" href="?q=Q9682&level=5&type=descendants&orientation=North&lang=en">Elizabeth II descendants</a>
         <a class="dropdown-item" href="?q=Q7404563&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on">Khan family</a>
+        <a class="dropdown-item" href="?q=Q7404563&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on&options[socialmedia]=on">United Nations structure</a>
 
 
       </div>
@@ -330,7 +331,7 @@
         return $( "<li>" )
             .append( "<div><b>" + item.label + "</b><br>" + item.description + "</div>" )
             .appendTo( ul );
-    };;
+    };
 </script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
