Add autocomplete checking in search input #5

--- a/public/index.html
+++ b/public/index.html
@@ -263,10 +263,10 @@
       -webkit-line-clamp: 8;
       -webkit-box-orient: vertical;
     }
-    .wikipediatext p{
+
+    .wikipediatext p {
       margin-bottom: 0;
     }
-
   </style>
 
 <body>
@@ -376,7 +376,7 @@
                     name="options[spouses]" />Spouses</a>
               </div>
             </div>
-            <button type="submit" class="form-control btn btn-primary">Search</button>
+            <button type="submit" id="search-button" class="form-control btn btn-primary">Search</button>
           </div>
 
         </div>
@@ -418,96 +418,11 @@
 
   <!--<script src="js/bundle.js"></script>-->
   <script src="js/treant-wikidata.js"></script>
+  <script src="js/search-bar.js"></script>
 
   <script type="text/javascript">
 
 
-    // // var options = [];
-    // wikidataController.wikidataApi({
-    //   ids     :  ['Q1','Q2'],//make labelIds unique https://futurestud.io/tutorials/node-js-get-an-array-with-unique-values-delete-duplicates
-    //   props   : 'labels' ,
-    //   lang    : 'en',
-    // },function (data) {
-    //   console.log(data);
-    // });
-    // var wbk = require('wikidata-sdk');
-    //
-    // const url = wbk.getManyEntities({
-    //   ids: ['Q1','Q2'],
-    //   languages: [ 'en', 'fr', 'de' ], // returns all languages if not specified
-    //   props: [ 'labels', 'descriptions', 'claims', 'sitelinks/urls' ], // returns all data if not specified
-    //   // format: 'xml', // defaults to json
-    //   // redirections: false // defaults to true
-    // });
-    // console.log(url);
-
-    $('.dropdown-settings a').on('click', function (event) {
-
-      var $target = $(event.currentTarget),
-        // val = $target.attr( 'data-value' ),
-        $inp = $target.find('input'),
-        val = $inp.attr('name'),
-        idx;
-
-      // if ( ( idx = options.indexOf( val ) ) > -1 ) {
-      //   options.splice( idx, 1 );
-      //   setTimeout( function() { $inp.prop( 'checked', false ) }, 0);
-      // } else {
-      //   options.push( val );
-      //   setTimeout( function() { $inp.prop( 'checked', true ) }, 0);
-      // }
-      $inp.prop('checked', !$inp.prop('checked'));
-
-
-      $(event.target).blur();
-
-      // console.log( options );
-      return false;
-    });
-
-    $("#option_lang").autocomplete({
-      source: getWikidataLanguagesSource(),
-      select: function (event, ui) {
-        $("#option_lang").val(ui.item.label);
-        $("#option_lang_hidden").val(ui.item.id);
-        return false;
-      }
-    });
-
-    $(".searchbox").autocomplete({
-      minLength: 2,
-      source: function (request, response) {
-        console.log(request.term);
-        $.ajax({
-          // https://www.wikidata.org/w/api.php?action=wbsearchentities&search=W&format=json&errorformat=plaintext&language=en&uselang=en&type=item
-          url: "https://www.wikidata.org/w/api.php",
-          dataType: "jsonp",
-          data: {
-            'action': "wbsearchentities",
-            'format': "json",
-            'errorformat': "plaintext",
-            'language': "en",
-            'uselang': "en",
-            'type': "item",
-            'search': request.term
-          },
-          success: function (data) {
-            // console.log(data);
-            data = data.search;
-            response(data);
-          }
-        });
-      },
-      select: function (event, ui) {
-        $("#searchbox").val(ui.item.label);
-        $("#searchbox_id").val(ui.item.id);
-        return false;
-      }
-    }).autocomplete("instance")._renderItem = function (ul, item) {
-      return $("<li>")
-        .append("<div><b>" + item.label + "</b><br>" + item.description + "</div>")
-        .appendTo(ul);
-    };
     function wikipedia(e, first, table) {
       console.log("start");
       var e = $(e);
@@ -521,7 +436,7 @@
       });
     }
     //close popover when clicking anywhere
-    $('body').on( 'click',  function () {
+    $('body').on('click', function () {
       $("a[data-id]").popover('hide');
     });
 
