Add github Logo and link to the repo in header #10

--- a/public/index.html
+++ b/public/index.html
@@ -272,49 +272,59 @@
 <body>
   <div class="container-fluid">
     <div class="row no-print">
-      <h1 class="app-title">Wikidata Tree Builder
-        <div class="dropdown" style="margin-left:50px;display:inline;">
-          <a class="btn btn-sm btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            examples
-          </a>
+      <h1 class="app-title row">
+        <span class="col-md-4">
+          <a class="btn btn-sm bg-white float-left" target="_blank" href="https://github.com/dataprick/wikitree"><img
+              src="storage/icons/github.png" /> Wikitree</a>
+        </span>
+        <span class="col-md-4">
+          Wikidata Tree Builder
+          <div class="dropdown" style="margin-left:50px;display:inline;">
+            <a class="btn btn-sm btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              examples
+            </a>
 
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item"
-              href="?q=Q712401&level=4&type=descendants&orientation=West&lang=en&options[birthname]=on&options[socialmedia]=on">Sudono
-              Salim descendants</a>
-            <a class="dropdown-item"
-              href="?q=Q92597022&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on">Walton
-              Family Tree</a>
-            <a class="dropdown-item" href="?q=Q4604&level=20&type=descendants&orientation=North&lang=en">Confucius
-              descendants </a>
-            <a class="dropdown-item" href="?q=Q5269611&level=6&type=ancestors&orientation=South&lang=en">Dhirendra of
-              Nepal ancestors</a>
-            <a class="dropdown-item"
-              href="?q=Q1516371&level=6&type=owns&orientation=North&lang=en&stack=false&options[socialmedia]=on">Sinar
-              Mas subsidiaries</a>
-            <a class="dropdown-item"
-              href="?q=Q3752663&level=5&type=descendants&orientation=North&lang=en&options[socialmedia]=on">Trump
-              family</a>
-            <a class="dropdown-item"
-              href="?q=Q2430565&level=9&type=descendants&orientation=North&lang=en">Hamengkubuwono, rulers of
-              Yogyakarta</a>
-            <a class="dropdown-item" href="?q=Q9682&level=5&type=descendants&orientation=North&lang=en">Elizabeth II
-              descendants</a>
-            <a class="dropdown-item"
-              href="?q=Q7404563&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on">Khan
-              family</a>
-            <a class="dropdown-item"
-              href="?q=Q7404563&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on&options[socialmedia]=on">United
-              Nations structure</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item"
+                href="?q=Q712401&level=4&type=descendants&orientation=West&lang=en&options[birthname]=on&options[socialmedia]=on">Sudono
+                Salim descendants</a>
+              <a class="dropdown-item"
+                href="?q=Q92597022&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on">Walton
+                Family Tree</a>
+              <a class="dropdown-item" href="?q=Q4604&level=20&type=descendants&orientation=North&lang=en">Confucius
+                descendants </a>
+              <a class="dropdown-item" href="?q=Q5269611&level=6&type=ancestors&orientation=South&lang=en">Dhirendra of
+                Nepal ancestors</a>
+              <a class="dropdown-item"
+                href="?q=Q1516371&level=6&type=owns&orientation=North&lang=en&stack=false&options[socialmedia]=on">Sinar
+                Mas subsidiaries</a>
+              <a class="dropdown-item"
+                href="?q=Q3752663&level=5&type=descendants&orientation=North&lang=en&options[socialmedia]=on">Trump
+                family</a>
+              <a class="dropdown-item"
+                href="?q=Q2430565&level=9&type=descendants&orientation=North&lang=en">Hamengkubuwono, rulers of
+                Yogyakarta</a>
+              <a class="dropdown-item" href="?q=Q9682&level=5&type=descendants&orientation=North&lang=en">Elizabeth II
+                descendants</a>
+              <a class="dropdown-item"
+                href="?q=Q7404563&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on">Khan
+                family</a>
+              <a class="dropdown-item"
+                href="?q=Q7404563&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on&options[socialmedia]=on">United
+                Nations structure</a>
 
 
+            </div>
           </div>
-        </div>
+        </span>
+        <span class="col-md-4">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Wikidata_Stamp_Rec_Light.svg/200px-Wikidata_Stamp_Rec_Light.svg.png"
+            style="background-color:white;height:25px;float: right;" />
+        </span>
+      </h1>
 
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Wikidata_Stamp_Rec_Light.svg/200px-Wikidata_Stamp_Rec_Light.svg.png"
-          style="background-color:white;height:25px;float: right;" /></h1>
     </div>
     <div class="row no-print">
       <form method="get" id="search" class="form-input col-md-12 pt-3">
