--- a/public/index.html
+++ b/public/index.html
@@ -384,6 +384,8 @@
                     name="options[education]" />Education</a>
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="spouses"
                     name="options[spouses]" />Spouses</a>
+                <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="occupations"
+                    name="options[occupations]" />Occupations</a>
               </div>
             </div>
             <button type="submit" id="search-button" class="form-control btn btn-primary">Search</button>
