hide images from index.html refs #22

--- a/public/index.html
+++ b/public/index.html
@@ -424,7 +424,7 @@
   <script src="js/Treant.js"></script>
   <script src="js/Treant-gui.js"></script>
   <script src="js/wikidataLang.js"></script>
-  <script src="storage/images.js"></script>
+<!--  <script src="storage/images.js"></script>-->
 
   <!--<script src="js/main.js"></script>-->
 
