Shrink github logo #10

--- a/public/index.html
+++ b/public/index.html
@@ -273,11 +273,12 @@
   <div class="container-fluid">
     <div class="row no-print">
       <h1 class="app-title row">
-        <span class="col-md-4">
-          <a class="btn btn-sm bg-white float-left" target="_blank" href="https://github.com/dataprick/wikitree"><img
-              src="storage/icons/github.png" /> Wikitree</a>
+        <span class="col-sm-2">
+          <a class="btn btn-sm bg-white float-left" target="_blank" href="https://github.com/dataprick/wikitree">
+            <img class="img img-fluid" src="storage/icons/github.png" style="max-height: 20px" ; /> Wikitree
+          </a>
         </span>
-        <span class="col-md-4">
+        <span class="col-sm-8">
           Wikidata Tree Builder
           <div class="dropdown" style="margin-left:50px;display:inline;">
             <a class="btn btn-sm btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
@@ -318,7 +319,7 @@
             </div>
           </div>
         </span>
-        <span class="col-md-4">
+        <span class="col-sm-2">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Wikidata_Stamp_Rec_Light.svg/200px-Wikidata_Stamp_Rec_Light.svg.png"
             style="background-color:white;height:25px;float: right;" />
