Add siblings in parent node when type is  ancestors and show siblings option is selected #23

--- a/public/index.html
+++ b/public/index.html
@@ -387,6 +387,8 @@
                     name="options[spouses]" />Spouses</a>
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="occupations"
                     name="options[occupations]" />Occupations</a>
+                <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="siblings"
+                  name="options[siblings]" />Show Siblings</a>
               </div>
             </div>
             <button type="submit" id="search-button" class="form-control btn btn-primary">Search</button>
