move .collapse switch to be outside of the box #27

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
       height: 20%;
       bottom: 1px;
       border: none;
+      margin-right: -30px;
     }
     /* https://www.labnol.org/code/20086-css-arrow-caret-symbol */
     /* caret to uncollapse */
