remove treant-wikdiata add bundle #41

--- a/public/index.html
+++ b/public/index.html
@@ -482,8 +482,8 @@
 
   <!--<script src="js/main.js"></script>-->
 
-  <!--<script src="js/bundle.js"></script>-->
-  <script src="js/treant-wikidata.js"></script>
+  <script src="js/bundle.js"></script>
+<!--  <script src="js/treant-wikidata.js"></script>-->
   <script src="js/search-bar.js"></script>
 
   <script type="text/javascript">
