--- a/public/index.html
+++ b/public/index.html
@@ -359,8 +359,8 @@
               <a class="dropdown-item"
                 href="?q=Q7404563&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on&options[socialmedia]=on">United
                 Nations structure</a>
-
-
+              <a class="dropdown-item"
+                 href="?q=Q15928745&level=3&type=descendants&orientation=North&lang=en">Panda family tree</a>
             </div>
           </div>
         </span>
