--- a/public/index.html
+++ b/public/index.html
@@ -340,7 +340,7 @@
                 Family Tree</a>
               <a class="dropdown-item" href="?q=Q4604&level=20&type=descendants&orientation=North&lang=en">Confucius
                 descendants </a>
-              <a class="dropdown-item" href="?q=Q5269611&level=6&type=ancestors&orientation=South&lang=en">Dhirendra of
+              <a class="dropdown-item" href="?q=Q5269611&level=6&type=ancestors&orientation=South&lang=en&second_lang=ne">Dhirendra of
                 Nepal ancestors</a>
               <a class="dropdown-item"
                 href="?q=Q1516371&level=6&type=owns&orientation=North&lang=en&stack=false&options[socialmedia]=on">Sinar
@@ -357,7 +357,7 @@
                 href="?q=Q7404563&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on">Khan
                 family</a>
               <a class="dropdown-item"
-                href="?q=Q7404563&level=4&type=descendants&orientation=North&lang=en&options[socialmedia]=on&options[socialmedia]=on">United
+                href="?q=Q1065&level=3&type=owns&orientation=West&lang=en&options[socialmedia]=on">United
                 Nations structure</a>
               <a class="dropdown-item"
                  href="?q=Q15928745&level=3&type=descendants&orientation=North&lang=en">Panda family tree</a>
