--- a/public/index.html
+++ b/public/index.html
@@ -361,6 +361,8 @@
                 Nations structure</a>
               <a class="dropdown-item"
                  href="?q=Q15928745&level=3&type=descendants&orientation=North&lang=en">Panda family tree</a>
+              <a class="dropdown-item"
+                 href="?q=Q206018&level=5&type=ancestors&orientation=West&lang=en&options[occupations]=on">Arwen's ancestors</a>
             </div>
           </div>
         </span>
