add hospital settings #15

--- a/public/index.html
+++ b/public/index.html
@@ -431,11 +431,13 @@
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="education"
                     name="options[education]" />Education</a>
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="spouses"
-                    name="options[spouses]" />Spouses</a>
+                    name="options[spouses]" />Spouses (beta)</a>
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="occupations"
                     name="options[occupations]" />Occupations</a>
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="siblings"
                   name="options[siblings]" />Show Siblings</a>
+                <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="siblings"
+                   name="options[placeInsteadOfHopsital]" />Show birth city instead of hopsital</a>
               </div>
             </div>
             <button type="submit" id="search-button" class="form-control btn btn-primary">Search</button>
